[package]
name = "rust-ast-parser"
version = "0.1.0"
authors = ["Klas <klasseg@kth.se>"]

[dependencies]
#standalone-syn  = { version = "0.13.0", features = ["full"] }
clap = "2.31.2"
syn  = { version = "0.12.13", features = ["full", "extra-traits", "visit", "derive"] }

#syntex_syntax = "0.59.1"
#pad = "0.1.4"
#diff = "0.1.11"
#
# , features = ["full", "extra-traits", "visit", "derive"]
#standalone-syn  = { version = "0.13.0", standalone-syn = { "0.13.0", features = ["full", "extra-traits", "visit", "derive"]}}
#failure = "0.1.1"
